safari bottom spacing issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,13 +59,16 @@ a {
 
 .content-wrap {
   position: absolute;
-  margin: 8rem 12rem;
+  margin: 8rem 12rem 0;
+  padding-bottom: 8rem;
 
   @media screen and (max-width: 1000px) {
-    margin: 8rem 6.5rem;
+    margin-left: 6.5rem;
+    margin-right: 6.5rem;
   }
   @media screen and (max-width: 500px) {
-    margin: 8rem 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
   @media print {
     margin: 0;
